# jsonifyer

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt  delta_inh.txt
.github/workflows/: ubuntu_clang.yaml  ubuntu_gcc.yaml
benchmarks/: CMakeLists.txt  README.md  fixture.hpp  main.cpp  parse.cpp  parse_data_boost.cpp  parse_data_nlohmann.cpp  process.cpp  process_data_boost.cpp  process_data_nlohmann.cpp  serialize.cpp  serialize_data_boost.cpp  serialize_data_nlohmann.cpp
benchmarks/includes/r/: metadata.hpp
dev/bench/clang_18.04_10_Debug_17/parse/: data.js
dev/bench/clang_18.04_10_Debug_17/process/: data.js
dev/bench/clang_18.04_10_Debug_17/serialize/: data.js
dev/bench/clang_18.04_10_Release_17/parse/: data.js
dev/bench/clang_18.04_10_Release_17/process/: data.js
dev/bench/clang_18.04_10_Release_17/serialize/: data.js
dev/bench/clang_18.04_11_Debug_17/parse/: data.js
dev/bench/clang_18.04_11_Debug_17/process/: data.js
dev/bench/clang_18.04_11_Debug_17/serialize/: data.js
dev/bench/clang_18.04_11_Release_17/parse/: data.js
dev/bench/clang_18.04_11_Release_17/process/: data.js
dev/bench/clang_18.04_11_Release_17/serialize/: data.js
dev/bench/clang_18.04_12_Debug_17/parse/: data.js
dev/bench/clang_18.04_12_Debug_17/process/: data.js
dev/bench/clang_18.04_12_Debug_17/serialize/: data.js
dev/bench/clang_18.04_12_Release_17/parse/: data.js
dev/bench/clang_18.04_12_Release_17/process/: data.js
dev/bench/clang_18.04_12_Release_17/serialize/: data.js
dev/bench/clang_18.04_13_Debug_17/parse/: data.js
dev/bench/clang_18.04_13_Debug_17/process/: data.js
dev/bench/clang_18.04_13_Debug_17/serialize/: data.js
dev/bench/clang_18.04_13_Release_17/parse/: data.js
dev/bench/clang_18.04_13_Release_17/process/: data.js
dev/bench/clang_18.04_13_Release_17/serialize/: data.js
dev/bench/clang_18.04_14_Debug_17/parse/: data.js
dev/bench/clang_18.04_14_Debug_17/process/: data.js
dev/bench/clang_18.04_14_Debug_17/serialize/: data.js
dev/bench/clang_18.04_14_Release_17/parse/: data.js
dev/bench/clang_18.04_14_Release_17/process/: data.js
dev/bench/clang_18.04_14_Release_17/serialize/: data.js
dev/bench/clang_18.04_15_Debug_17/parse/: data.js
dev/bench/clang_18.04_15_Debug_17/process/: data.js
dev/bench/clang_18.04_15_Debug_17/serialize/: data.js
dev/bench/clang_18.04_15_Release_17/parse/: data.js
dev/bench/clang_18.04_15_Release_17/process/: data.js
dev/bench/clang_18.04_15_Release_17/serialize/: data.js
dev/bench/clang_18.04_16_Debug_17/parse/: data.js
dev/bench/clang_18.04_16_Debug_17/process/: data.js
dev/bench/clang_18.04_16_Debug_17/serialize/: data.js
dev/bench/clang_18.04_16_Release_17/parse/: data.js
dev/bench/clang_18.04_16_Release_17/process/: data.js
dev/bench/clang_18.04_16_Release_17/serialize/: data.js
dev/bench/clang_18.04_6.0_Debug_17/parse/: data.js
dev/bench/clang_18.04_6.0_Debug_17/process/: data.js
dev/bench/clang_18.04_6.0_Debug_17/serialize/: data.js
dev/bench/clang_18.04_6.0_Release_17/parse/: data.js
dev/bench/clang_18.04_6.0_Release_17/process/: data.js
dev/bench/clang_18.04_6.0_Release_17/serialize/: data.js
dev/bench/clang_18.04_7_Debug_17/parse/: data.js
dev/bench/clang_18.04_7_Debug_17/process/: data.js
dev/bench/clang_18.04_7_Debug_17/serialize/: data.js
dev/bench/clang_18.04_7_Release_17/parse/: data.js
dev/bench/clang_18.04_7_Release_17/process/: data.js
dev/bench/clang_18.04_7_Release_17/serialize/: data.js
dev/bench/clang_18.04_8_Debug_17/parse/: data.js
dev/bench/clang_18.04_8_Debug_17/process/: data.js
dev/bench/clang_18.04_8_Debug_17/serialize/: data.js
dev/bench/clang_18.04_8_Release_17/parse/: data.js
dev/bench/clang_18.04_8_Release_17/process/: data.js
dev/bench/clang_18.04_8_Release_17/serialize/: data.js
dev/bench/clang_18.04_9_Debug_17/parse/: data.js
dev/bench/clang_18.04_9_Debug_17/process/: data.js
dev/bench/clang_18.04_9_Debug_17/serialize/: data.js
dev/bench/clang_18.04_9_Release_17/parse/: data.js
dev/bench/clang_18.04_9_Release_17/process/: data.js
dev/bench/clang_18.04_9_Release_17/serialize/: data.js
dev/bench/clang_20.04_10_Debug_17/parse/: data.js
dev/bench/clang_20.04_10_Debug_17/process/: data.js
dev/bench/clang_20.04_10_Debug_17/serialize/: data.js
dev/bench/clang_20.04_10_Release_17/parse/: data.js
dev/bench/clang_20.04_10_Release_17/process/: data.js
dev/bench/clang_20.04_10_Release_17/serialize/: data.js
dev/bench/clang_20.04_11_Debug_17/parse/: data.js
dev/bench/clang_20.04_11_Debug_17/process/: data.js
dev/bench/clang_20.04_11_Debug_17/serialize/: data.js
dev/bench/clang_20.04_11_Release_17/parse/: data.js
dev/bench/clang_20.04_11_Release_17/process/: data.js
dev/bench/gcc_18.04_7_Debug_17/: data.js
dev/bench/gcc_18.04_7_Release_17/: data.js
dev/bench/gcc_18.04_8_Debug_17/: data.js
dev/bench/gcc_18.04_8_Release_17/: data.js
dev/bench/gcc_20.04_10_Debug_17/: data.js
dev/bench/gcc_20.04_10_Release_17/: data.js
dev/bench/gcc_20.04_7_Debug_17/: data.js
dev/bench/gcc_20.04_7_Release_17/: data.js
dev/bench/gcc_20.04_8_Debug_17/: data.js
dev/bench/gcc_20.04_8_Release_17/: data.js
dev/bench/gcc_20.04_9_Debug_17/: data.js
dev/bench/gcc_20.04_9_Release_17/: data.js
dev/bench/gcc_22.04_10_Debug_17/: data.js
dev/bench/gcc_22.04_10_Release_17/: data.js
dev/bench/gcc_22.04_11_Debug_17/: data.js
dev/bench/gcc_22.04_11_Release_17/: data.js
dev/bench/gcc_22.04_12_Debug_17/: data.js
dev/bench/gcc_22.04_12_Release_17/: data.js
dev/bench/gcc_22.04_9_Debug_17/: data.js
dev/bench/gcc_22.04_9_Release_17/: data.js
example/: CMakeLists.txt  generate.hpp  minimal.cpp  unit.hpp  unit.json
example/includes/: deques.hpp  integrals.hpp  lists.hpp  maps.hpp  sets.hpp  strings.hpp  tools.hpp  unordered_maps.hpp  vectors.hpp
example/includes/r/: README.md  metadata.hpp
jsonifyer/: getters.hpp  parser.hpp  sbind.hpp  serializer.hpp  setters.hpp  type_traits.hpp
tests/: CMakeLists.txt  complex.cpp  forward.hpp  get.cpp  integrals.cpp
(+115 files in other folders)
